# sigil

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  requirements-dev.txt  setup.py  test_basic.py
examples/: sf_zipcodes_demo.py
sigil/: __init__.py  core.py  optimizer.py  projection.py  visualization.py
